src/kevin/parser/OperacionesParser.java
// Generated from Operaciones.g4 by ANTLR 4.8
package kevin.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OperacionesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SI=1, ENTERO=2, PROYECTAR=3, GALLETA=4, SINO=5, TRUE=6, FALSE=7, MIENTRAS=8, 
		NOT=9, LLAVEA=10, LLAVEC=11, DOSPUNTOS=12, COMA=13, PYC=14, IGUAL=15, 
		POR=16, DIV=17, CORCH_A=18, CORCH_C=19, MAS=20, MENOS=21, PAR_A=22, PAR_C=23, 
		FLOTANTE=24, NUM_FLOTANTE=25, IGUALA=26, MAYORQUE=27, MENORQUE=28, MAYORIGUAL=29, 
		MENORIGUAL=30, DIFERENTE=31, AND=32, OR=33, INT=34, CADENA=35, ID=36, 
		ESPACIOS=37, LINE_COMMENT=38, COMMENT=39;
	public static final int
		RULE_start = 0, RULE_cuerpo = 1, RULE_mientras = 2, RULE_cuerpo2 = 3, 
		RULE_condicionSi = 4, RULE_condicionSiNoSi = 5, RULE_condicionSiNoHaz = 6, 
		RULE_comparacion = 7, RULE_validacion = 8, RULE_declaraciones = 9, RULE_expr = 10, 
		RULE_imprimir = 11, RULE_imprimirExpr = 12, RULE_imprimirCadena = 13, 
		RULE_imprimirVariable = 14, RULE_imprimirNum = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "cuerpo", "mientras", "cuerpo2", "condicionSi", "condicionSiNoSi", 
			"condicionSiNoHaz", "comparacion", "validacion", "declaraciones", "expr", 
			"imprimir", "imprimirExpr", "imprimirCadena", "imprimirVariable", "imprimirNum"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'camara'", "'int'", "'imprimir'", "'galleta'", "'esquina'", "'TRUE'", 
			"'FALSE'", "'mientras'", "'NO'", "'{'", "'}'", "':'", "','", "';'", "'='", 
			"'*'", "'/'", "'['", "']'", "'+'", "'-'", "'('", "')'", "'flotante'", 
			null, "'=='", "'>'", "'<'", "'>='", "'<='", "'!='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SI", "ENTERO", "PROYECTAR", "GALLETA", "SINO", "TRUE", "FALSE", 
			"MIENTRAS", "NOT", "LLAVEA", "LLAVEC", "DOSPUNTOS", "COMA", "PYC", "IGUAL", 
			"POR", "DIV", "CORCH_A", "CORCH_C", "MAS", "MENOS", "PAR_A", "PAR_C", 
			"FLOTANTE", "NUM_FLOTANTE", "IGUALA", "MAYORQUE", "MENORQUE", "MAYORIGUAL", 
			"MENORIGUAL", "DIFERENTE", "AND", "OR", "INT", "CADENA", "ID", "ESPACIOS", 
			"LINE_COMMENT", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Operaciones.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OperacionesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	 
		public StartContext() { }
		public void copyFrom(StartContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LenguajeContext extends StartContext {
		public TerminalNode GALLETA() { return getToken(OperacionesParser.GALLETA, 0); }
		public TerminalNode ID() { return getToken(OperacionesParser.ID, 0); }
		public TerminalNode PAR_A() { return getToken(OperacionesParser.PAR_A, 0); }
		public TerminalNode PAR_C() { return getToken(OperacionesParser.PAR_C, 0); }
		public TerminalNode LLAVEA() { return getToken(OperacionesParser.LLAVEA, 0); }
		public TerminalNode LLAVEC() { return getToken(OperacionesParser.LLAVEC, 0); }
		public List<CuerpoContext> cuerpo() {
			return getRuleContexts(CuerpoContext.class);
		}
		public CuerpoContext cuerpo(int i) {
			return getRuleContext(CuerpoContext.class,i);
		}
		public LenguajeContext(StartContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OperacionesVisitor ) return ((OperacionesVisitor<? extends T>)visitor).visitLenguaje(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			_localctx = new LenguajeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(GALLETA);
			setState(33);
			match(ID);
			setState(34);
			match(PAR_A);
			setState(35);
			match(PAR_C);
			setState(36);
			match(LLAVEA);
			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SI) | (1L << ENTERO) | (1L << PROYECTAR) | (1L << MIENTRAS) | (1L << PAR_A) | (1L << FLOTANTE) | (1L << NUM_FLOTANTE) | (1L << INT) | (1L << ID))) != 0)) {
				{
				{
				setState(37);
				cuerpo();
				}
				}
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(43);
			match(LLAVEC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CuerpoContext extends ParserRuleContext {
		public CuerpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo; }
	 
		public CuerpoContext() { }
		public void copyFrom(CuerpoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ContenidoCuerpoContext extends CuerpoContext {
		public DeclaracionesContext declaraciones() {
			return getRuleContext(DeclaracionesContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ImprimirContext imprimir() {
			return getRuleContext(ImprimirContext.class,0);
		}
		public CondicionSiContext condicionSi() {
			return getRuleContext(CondicionSiContext.class,0);
		}
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public ContenidoCuerpoContext(CuerpoContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OperacionesVisitor ) return ((OperacionesVisitor<? extends T>)visitor).visitContenidoCuerpo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CuerpoContext cuerpo() throws RecognitionException {
		CuerpoContext _localctx = new CuerpoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_cuerpo);
		try {
			_localctx = new ContenidoCuerpoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(45);
				declaraciones();
				}
				break;
			case 2:
				{
				setState(46);
				expr(0);
				}
				break;
			case 3:
				{
				setState(47);
				imprimir();
				}
				break;
			case 4:
				{
				setState(48);
				condicionSi();
				}
				break;
			case 5:
				{
				setState(49);
				mientras();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MientrasContext extends ParserRuleContext {
		public TerminalNode MIENTRAS() { return getToken(OperacionesParser.MIENTRAS, 0); }
		public TerminalNode PAR_A() { return getToken(OperacionesParser.PAR_A, 0); }
		public ComparacionContext comparacion() {
			return getRuleContext(ComparacionContext.class,0);
		}
		public TerminalNode PAR_C() { return getToken(OperacionesParser.PAR_C, 0); }
		public TerminalNode LLAVEA() { return getToken(OperacionesParser.LLAVEA, 0); }
		public Cuerpo2Context cuerpo2() {
			return getRuleContext(Cuerpo2Context.class,0);
		}
		public TerminalNode LLAVEC() { return getToken(OperacionesParser.LLAVEC, 0); }
		public MientrasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mientras; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OperacionesVisitor ) return ((OperacionesVisitor<? extends T>)visitor).visitMientras(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MientrasContext mientras() throws RecognitionException {
		MientrasContext _localctx = new MientrasContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mientras);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(MIENTRAS);
			setState(53);
			match(PAR_A);
			setState(54);
			comparacion();
			setState(55);
			match(PAR_C);
			setState(56);
			match(LLAVEA);
			setState(57);
			cuerpo2();
			setState(58);
			match(LLAVEC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cuerpo2Context extends ParserRuleContext {
		public List<CuerpoContext> cuerpo() {
			return getRuleContexts(CuerpoContext.class);
		}
		public CuerpoContext cuerpo(int i) {
			return getRuleContext(CuerpoContext.class,i);
		}
		public Cuerpo2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo2; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OperacionesVisitor ) return ((OperacionesVisitor<? extends T>)visitor).visitCuerpo2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cuerpo2Context cuerpo2() throws RecognitionException {
		Cuerpo2Context _localctx = new Cuerpo2Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_cuerpo2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SI) | (1L << ENTERO) | (1L << PROYECTAR) | (1L << MIENTRAS) | (1L << PAR_A) | (1L << FLOTANTE) | (1L << NUM_FLOTANTE) | (1L << INT) | (1L << ID))) != 0)) {
				{
				{
				setState(60);
				cuerpo();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionSiContext extends ParserRuleContext {
		public TerminalNode SI() { return getToken(OperacionesParser.SI, 0); }
		public TerminalNode PAR_A() { return getToken(OperacionesParser.PAR_A, 0); }
		public ComparacionContext comparacion() {
			return getRuleContext(ComparacionContext.class,0);
		}
		public TerminalNode PAR_C() { return getToken(OperacionesParser.PAR_C, 0); }
		public TerminalNode LLAVEA() { return getToken(OperacionesParser.LLAVEA, 0); }
		public Cuerpo2Context cuerpo2() {
			return getRuleContext(Cuerpo2Context.class,0);
		}
		public TerminalNode LLAVEC() { return getToken(OperacionesParser.LLAVEC, 0); }
		public CondicionSiNoSiContext condicionSiNoSi() {
			return getRuleContext(CondicionSiNoSiContext.class,0);
		}
		public CondicionSiNoHazContext condicionSiNoHaz() {
			return getRuleContext(CondicionSiNoHazContext.class,0);
		}
		public CondicionSiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicionSi; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OperacionesVisitor ) return ((OperacionesVisitor<? extends T>)visitor).visitCondicionSi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionSiContext condicionSi() throws RecognitionException {
		CondicionSiContext _localctx = new CondicionSiContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_condicionSi);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(SI);
			setState(67);
			match(PAR_A);
			setState(68);
			comparacion();
			setState(69);
			match(PAR_C);
			setState(70);
			match(LLAVEA);
			setState(71);
			cuerpo2();
			setState(72);
			match(LLAVEC);
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(73);
				condicionSiNoSi();
				}
				break;
			}
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SINO) {
				{
				setState(76);
				condicionSiNoHaz();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionSiNoSiContext extends ParserRuleContext {
		public TerminalNode SINO() { return getToken(OperacionesParser.SINO, 0); }
		public TerminalNode SI() { return getToken(OperacionesParser.SI, 0); }
		public TerminalNode PAR_A() { return getToken(OperacionesParser.PAR_A, 0); }
		public ComparacionContext comparacion() {
			return getRuleContext(ComparacionContext.class,0);
		}
		public TerminalNode PAR_C() { return getToken(OperacionesParser.PAR_C, 0); }
		public TerminalNode LLAVEA() { return getToken(OperacionesParser.LLAVEA, 0); }
		public Cuerpo2Context cuerpo2() {
			return getRuleContext(Cuerpo2Context.class,0);
		}
		public TerminalNode LLAVEC() { return getToken(OperacionesParser.LLAVEC, 0); }
		public List<CondicionSiNoSiContext> condicionSiNoSi() {
			return getRuleContexts(CondicionSiNoSiContext.class);
		}
		public CondicionSiNoSiContext condicionSiNoSi(int i) {
			return getRuleContext(CondicionSiNoSiContext.class,i);
		}
		public CondicionSiNoHazContext condicionSiNoHaz() {
			return getRuleContext(CondicionSiNoHazContext.class,0);
		}
		public CondicionSiNoSiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicionSiNoSi; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OperacionesVisitor ) return ((OperacionesVisitor<? extends T>)visitor).visitCondicionSiNoSi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionSiNoSiContext condicionSiNoSi() throws RecognitionException {
		CondicionSiNoSiContext _localctx = new CondicionSiNoSiContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_condicionSiNoSi);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(SINO);
			setState(80);
			match(SI);
			setState(81);
			match(PAR_A);
			setState(82);
			comparacion();
			setState(83);
			match(PAR_C);
			setState(84);
			match(LLAVEA);
			setState(85);
			cuerpo2();
			setState(86);
			match(LLAVEC);
			setState(90);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(87);
					condicionSiNoSi();
					}
					} 
				}
				setState(92);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(93);
				condicionSiNoHaz();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionSiNoHazContext extends ParserRuleContext {
		public TerminalNode SINO() { return getToken(OperacionesParser.SINO, 0); }
		public TerminalNode LLAVEA() { return getToken(OperacionesParser.LLAVEA, 0); }
		public Cuerpo2Context cuerpo2() {
			return getRuleContext(Cuerpo2Context.class,0);
		}
		public TerminalNode LLAVEC() { return getToken(OperacionesParser.LLAVEC, 0); }
		public CondicionSiNoHazContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicionSiNoHaz; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OperacionesVisitor ) return ((OperacionesVisitor<? extends T>)visitor).visitCondicionSiNoHaz(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionSiNoHazContext condicionSiNoHaz() throws RecognitionException {
		CondicionSiNoHazContext _localctx = new CondicionSiNoHazContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condicionSiNoHaz);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(SINO);
			setState(97);
			match(LLAVEA);
			setState(98);
			cuerpo2();
			setState(99);
			match(LLAVEC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparacionContext extends ParserRuleContext {
		public ComparacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparacion; }
	 
		public ComparacionContext() { }
		public void copyFrom(ComparacionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OrContext extends ComparacionContext {
		public List<ValidacionContext> validacion() {
			return getRuleContexts(ValidacionContext.class);
		}
		public ValidacionContext validacion(int i) {
			return getRuleContext(ValidacionContext.class,i);
		}
		public List<TerminalNode> PAR_A() { return getTokens(OperacionesParser.PAR_A); }
		public TerminalNode PAR_A(int i) {
			return getToken(OperacionesParser.PAR_A, i);
		}
		public List<TerminalNode> PAR_C() { return getTokens(OperacionesParser.PAR_C); }
		public TerminalNode PAR_C(int i) {
			return getToken(OperacionesParser.PAR_C, i);
		}
		public List<TerminalNode> OR() { return getTokens(OperacionesParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(OperacionesParser.OR, i);
		}
		public OrContext(ComparacionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OperacionesVisitor ) return ((OperacionesVisitor<? extends T>)visitor).visitOr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AndContext extends ComparacionContext {
		public List<ValidacionContext> validacion() {
			return getRuleContexts(ValidacionContext.class);
		}
		public ValidacionContext validacion(int i) {
			return getRuleContext(ValidacionContext.class,i);
		}
		public List<TerminalNode> PAR_A() { return getTokens(OperacionesParser.PAR_A); }
		public TerminalNode PAR_A(int i) {
			return getToken(OperacionesParser.PAR_A, i);
		}
		public List<TerminalNode> PAR_C() { return getTokens(OperacionesParser.PAR_C); }
		public TerminalNode PAR_C(int i) {
			return getToken(OperacionesParser.PAR_C, i);
		}
		public List<TerminalNode> AND() { return getTokens(OperacionesParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(OperacionesParser.AND, i);
		}
		public AndContext(ComparacionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OperacionesVisitor ) return ((OperacionesVisitor<? extends T>)visitor).visitAnd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValiContext extends ComparacionContext {
		public ValidacionContext validacion() {
			return getRuleContext(ValidacionContext.class,0);
		}
		public List<TerminalNode> PAR_A() { return getTokens(OperacionesParser.PAR_A); }
		public TerminalNode PAR_A(int i) {
			return getToken(OperacionesParser.PAR_A, i);
		}
		public List<TerminalNode> PAR_C() { return getTokens(OperacionesParser.PAR_C); }
		public TerminalNode PAR_C(int i) {
			return getToken(OperacionesParser.PAR_C, i);
		}
		public ValiContext(ComparacionContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OperacionesVisitor ) return ((OperacionesVisitor<? extends T>)visitor).visitVali(this);
			else return visitor.visitChildren(this);
		}
	}
